Archive/e8ac6159c063cf2276e63e067628f3da-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:3:1: error: static assertion failed: 
 static_assert(std::is_same<std::make_signed<const unsigned int>, const signed int>(), "");
 ^
